# danny

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-glob.rs  test-patterns.sh
.github/workflows/: napi-build.yml  release.yml  rust-ci.yml
crates/danny-backend-js/: Cargo.toml
crates/danny-backend-js/src/: backend.rs  file_discovery.rs  lib.rs  toml_config.rs
crates/danny-backend-js/src/analyzers/: bundle_size.rs  class_members.rs  dependency_chains.rs  dynamic_imports.rs  enum_members.rs  mod.rs  npm_dependencies.rs  quality.rs  side_effects.rs  type_only.rs
crates/danny-backend-js/tests/: fob_api_integration.rs  phase1_integration.rs
crates/danny-cli/: Cargo.toml
crates/danny-cli/src/: ignore.rs  lib.rs  main.rs
crates/danny-cli/src/cli/: analysis.rs  category.rs  filtering.rs  mod.rs
crates/danny-cli/src/commands/: config.rs  feed.rs  mod.rs
crates/danny-cli/src/display/: capabilities.rs  mod.rs  monorepo.rs
crates/danny-cli/src/entry_points/: detector.rs  files.rs  mod.rs  package.rs  security.rs
crates/danny-cli/src/formatters/: json.rs  mod.rs
crates/danny-cli/src/formatters/human/: circular.rs  dependencies.rs  exports.rs  files.rs  framework.rs  imports.rs  mod.rs  quality.rs  symbols.rs  tests.rs  types.rs
crates/danny-config/: Cargo.toml
crates/danny-config/src/: lib.rs  manager.rs  security.rs  types.rs
crates/danny-core/: Cargo.toml
crates/danny-core/src/: backend.rs  circular_deps.rs  enrichment.rs  error.rs  lib.rs  types.rs  validation.rs
crates/danny-deps/: Cargo.toml  PLAN.md  README.md
crates/danny-deps/examples/: check_updates.rs  parse_and_update.rs  workspace_demo.rs
crates/danny-deps/src/: checksum.rs  error.rs  integration.rs  lib.rs  traits.rs  types.rs  update.rs  version.rs
crates/danny-deps/src/cargo/: lockfile.rs  mod.rs  parser.rs  workspace.rs
crates/danny-deps/src/npm/: lockfile.rs  mod.rs  parser.rs  workspace.rs
crates/danny-deps/tests/: integration.rs
crates/danny-fs/: Cargo.toml
crates/danny-fs/src/: file_system.rs  lib.rs  native.rs  trait.rs  wasm.rs
crates/danny-fs/tests/: basic_tests.rs
crates/danny-info/: CHANGELOG_PARSING.md  Cargo.toml  README.md
crates/danny-info/examples/: basic.rs  changelog_parser.rs
crates/danny-info/src/: changelog_parser.rs  client.rs  crates_io.rs  error.rs  github.rs  jsr.rs  lib.rs  npm.rs  repository.rs  types.rs
crates/danny-info/tests/: integration.rs
crates/danny-rule-engine/: Cargo.toml
crates/danny-rule-engine/src/: bridge.rs  built_in.rs  constants.rs  detection.rs  engine.rs  entry_points.rs  lib.rs  loader.rs  matcher.rs  toml_rule.rs
crates/danny-rule-engine/src/built_in/: nextjs.toml  react.toml  svelte.toml  vue.toml
crates/danny-rule-engine/tests/: security_tests.rs  usage_count_integration.rs
test-files/: example1.js  example2.ts  example3.jsx  test-combined-features.ts  test-enum-container.ts  test-namespace-container.ts
test-files/nextjs-app/: .gitignore  README.md  SETUP.md  ground-truth.json  knip.json  package-lock.json  package.json  proxy.ts  test-quality-entry.ts
test-files/nextjs-app-new/: package-lock.json  package.json
test-files/nextjs-app/.next/: BUILD_ID  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
test-files/nextjs-app/.next/cache/: .tsbuildinfo
test-files/nextjs-app/.next/cache/webpack/client-production/: index.pack
test-files/nextjs-app/.next/cache/webpack/edge-server-production/: index.pack
test-files/nextjs-app/.next/cache/webpack/server-production/: 0.pack  index.pack
test-files/nextjs-app/.next/server/: functions-config-manifest.json  middleware-build-manifest.js  pages-manifest.json
test-files/nextjs-app/.next/server/pages/: 404.html  500.html  _document.js  _error.js  about.html  contact.html  demo.html  demo.js  demo.json  index.js
test-files/nextjs-app/.next/static/QT8P3P8cC7oJx6eLV90C8/: _buildManifest.js  _ssgManifest.js
test-files/nextjs-app/.next/static/chunks/pages/: about-c21b7d3b74ee8391.js  contact-0ec603e1e28e8c65.js  demo-5d9fcdc5d07ffec8.js  index-5a209902c7e3aa2a.js
test-files/nextjs-app/.next/static/css/: b57f517450f92a86.css
test-files/nextjs-app/app/: error.tsx  layout.tsx  opengraph-image.tsx  page.tsx
test-files/nextjs-app/app/blog/[slug]/: route.ts
test-files/nextjs-app/app/dashboard/: layout.tsx
test-files/nextjs-app/app/dashboard/@analytics/: default.tsx
test-files/nextjs-app/components/: Button.tsx  Card.jsx  Footer.jsx  Header.jsx  Sidebar.jsx  UnusedModal.tsx
test-files/nextjs-app/lib/: analytics.js  legacy-utils.ts
test-files/nextjs-app/pages/: about.jsx  contact.jsx  demo.tsx  index.jsx
test-files/nextjs-app/styles/: globals.css
test-files/nextjs-app/utils/: code-smells.ts  helpers.ts
test-files/react-app/: package-lock.json
test-files/vue-app/: package.json
