[workspace]
members = [
    "crates/danny-cli",
    "crates/danny-core",
    "crates/danny-backend-js",
    "crates/danny-rule-engine",
    "crates/danny-config",
    "crates/danny-fs",
    "crates/danny-deps",
    "crates/danny-info",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.83"
authors = ["Fox <fox@nine.blue>"]
license = "MIT"
repository = "https://github.com/foxworth-uni/danny"
homepage = "https://github.com/foxworth-uni/danny"

[workspace.dependencies]
# Internal crates
danny-core = { path = "crates/danny-core" }
danny-backend-js = { path = "crates/danny-backend-js" }
danny-rule-engine = { path = "crates/danny-rule-engine" }
danny-config = { path = "crates/danny-config" }
danny-fs = { path = "crates/danny-fs" }
danny-deps = { path = "crates/danny-deps" }
danny-info = { path = "crates/danny-info" }

# Error handling
anyhow = "1.0"
thiserror = "2.0"
miette = { version = "7.4", features = ["fancy"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Oxc ecosystem (JavaScript/TypeScript parsing)
oxc_allocator = "0.98.0"
oxc_parser = "0.98.0"
oxc_ast = "0.98.0"
oxc_semantic = "0.98.0"
oxc_span = "0.98.0"
# Note: oxc_resolver is a separate package with different versioning
oxc_resolver = "11"

# Python parsing (from Ruff git repo)
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.14.1" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.14.1" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.14.1" }

# Testing
tempfile = "3.23.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
toml = "0.9.8"

# File system
walkdir = "2.5"
glob = "0.3"
ignore = "0.4"

# Pattern matching
regex = "1.10"
globset = "0.4"

# Fob integration (JavaScript analysis)
fob = { git = "https://github.com/foxworth-uni/fob", branch = "main", package = "fob" }

# NAPI (Node.js bindings)
napi = "3.4.0"
napi-derive = "3.3.0"

# Async runtime
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "sync"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Desktop UI (Dioxus)
dioxus = { version = "0.7.1", features = ["router"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# System directories
dirs = "6.0.0"

# WASM support
parking_lot = "0.12"

# HTTP client (for danny-info)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# URL parsing (for danny-info)
url = "2.5"

# Rate limiting (for danny-info)
governor = "0.10.2"

# Version handling (for danny-deps)
semver = "1.0"
node-semver = "2.2"

# TOML parsing (for danny-deps)
toml_edit = "0.23.7"

# Lockfile parsing (for danny-deps)
cargo-lock = "11.0.0"

# Cryptographic checksums (for danny-deps)
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Property testing (for danny-deps)
proptest = "1.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
