[package]
name = "danny-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smart bundler analyzer for modern web applications"
homepage = "https://github.com/foxworth-uni/danny"

[[bin]]
name = "danny"
path = "src/main.rs"

[dependencies]
# Core library
danny-core.workspace = true
danny-backend-js.workspace = true
danny-config.workspace = true
danny-rule-engine.workspace = true
danny-deps = { workspace = true }
danny-fs = { workspace = true }

# CLI
clap.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Time handling
chrono.workspace = true

# Async runtime
tokio.workspace = true
tokio-stream.workspace = true

# File system
glob.workspace = true
globset.workspace = true
ignore.workspace = true

# Temporary directories (for tests)
tempfile.workspace = true

# Pretty error reporting
miette.workspace = true

# Colored terminal output
colored = "3.0.0"
