[package]
name = "danny-config"
version.workspace = true
edition.workspace = true

[features]
default = ["native-fs"]
native-fs = ["danny-fs/native", "dirs"]
wasm = ["danny-fs/wasm"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
thiserror.workspace = true
chrono.workspace = true

# Danny core types
danny-core.workspace = true

# Danny filesystem abstraction
danny-fs = { workspace = true }

# Path handling (optional, only for native-fs)
dirs = { workspace = true, optional = true }

# Async
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
